Fix media box title text align

--- a/static/src/sass/modules/boxes/_media-box.scss
+++ b/static/src/sass/modules/boxes/_media-box.scss
@@ -24,6 +24,8 @@ $module: ".media-box";
 
     position: relative;
     display: block;
+    text-align: left;
+    
     @include margin-bottom(1);
     @include transition(all 0.5s ease-in-out);
 
